@@ -3,12 +3,14 @@ package com.huawei.blackhole.network.api.bean;
 import com.fasterxml.jackson.annotation.JsonIgnoreProperties;
 import com.fasterxml.jackson.annotation.JsonInclude;
 import com.fasterxml.jackson.annotation.JsonProperty;
+import com.huawei.blackhole.network.common.constants.Constants;
 import com.huawei.blackhole.network.common.constants.PntlInfo;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
 import java.io.Serializable;
 import java.text.DateFormat;
+import java.text.DecimalFormat;
 import java.text.ParseException;
 import java.text.SimpleDateFormat;
 import java.util.ArrayList;
@@ -121,10 +123,13 @@ public class DelayInfo implements Serializable {
     public static void saveInfo(DelayInfoAgent.Flow flow){
         String srcIp = flow.getSip();
         String dstIp = flow.getDip();
-        Long t1 = Long.valueOf(flow.getTimes().getT1());
-        Long t2 = Long.valueOf(flow.getTimes().getT2());
-        Long t3 = Long.valueOf(flow.getTimes().getT3());//对端接收到发送时间
-        Long t4 = Long.valueOf(flow.getTimes().getT4());//本端发送到接收时间
+
+        DecimalFormat df = new DecimalFormat(Constants.DECIMAL_FORMAT);
+        Double t1 = new Double(df.format(Double.parseDouble(flow.getTimes().getT1()) / 1000));
+        Double t2 = new Double(df.format(Double.parseDouble(flow.getTimes().getT2()) / 1000));
+        Double t3 = new Double(df.format(Double.parseDouble(flow.getTimes().getT3()) / 1000));//对端接收到发送时间
+        Double t4 = new Double(df.format(Double.parseDouble(flow.getTimes().getT4()) / 1000));//本端发送到接收时间
+
         boolean hasData = false;
 
         if (t4 < DelayInfo.getDelayThreshold()){
@@ -162,14 +167,14 @@ public class DelayInfo implements Serializable {
             return;
         }
 
-        DateFormat df = new SimpleDateFormat("yyyy-MM-dd HH:mm:ss");
+        DateFormat df = new SimpleDateFormat(Constants.TIME_FORMAT);
         Iterator<DelayInfoResult> it = resultList.iterator();
         DelayInfoResult delayInfo = null;
         while (it.hasNext()){
             delayInfo = it.next();
             try {
                 Date dt = df.parse(delayInfo.getTimestamp());
-                Long intervalTime = System.currentTimeMillis() / 1000 - dt.getTime()/1000;
+                Long intervalTime = System.currentTimeMillis() / 1000 - dt.getTime() / 1000;
                 if (intervalTime >= PntlInfo.MONITOR_INTERVAL_TIME_NEWEST) {
                     LOG.info("Remove warning:" + delayInfo.getSrcIp() + " -> " + delayInfo.getDstIp());
                     it.remove();
